--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,7 @@
   "name": "hunterarnl",
   "version": "0.1.0",
   "description": "",
+  "type": "module",
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -14,7 +15,7 @@
     "@types/node": "^22.5.1",
     "path": "^0.12.7",
     "prettier": "^3.3.3",
-    "solid-devtools": "^0.29.2",
+    "solid-devtools": "^0.29.3",
     "typescript": "^5.3.3",
     "typescript-plugin-css-modules": "^5.1.0",
     "url": "^0.11.4",
