--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "tw-watch": "tailwindcss -i ./src/index.css -o ./src/outdex.css --watch"
+    "tw-watch": "tailwindcss -i ./src/index.css -o ./src/outdex.css --watch",
+    "get-types": "supabase gen types typescript --project-id hbxueicmwatlhwvanigj > src/types/database.types.ts"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.47.12",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.1",
     "supabase": "^2.2.1"
